Se siguen agregando ejercicios correspondientes al apartado de funciones del libro en cuestion

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -876,6 +876,351 @@
     "\n",
     "print(calculo_cadena_mas_larga([\"Pepe\", \"Juan\", \"Maria\", \"Ana\"]))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problema 279\n",
+    "\n",
+    "Define una función que, dado el valor de los tres lados de un triángulo, debuelba la longitud de su perimetro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El perimetro del triangulo es 30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def calcula_perimetro_funcion(lado1, lado2, lado3):\n",
+    "    return lado1 + lado2 + lado3\n",
+    "\n",
+    "# Mandamos pedir datos de teclado\n",
+    "lado1 = float(input(\"Ingresa el lado 1 del triangulo:\\n\"))\n",
+    "lado2 = float(input(\"Ingresa el lado 2 del triangulo:\\n\"))\n",
+    "lado3 = float(input(\"Ingresa el lado 3 del triangulo:\\n\"))\n",
+    "\n",
+    "# Mostramos resultado de la funcion\n",
+    "print(\"El perimetro del triangulo es {0}\".format(calcula_perimetro_funcion(lado1, lado2, lado3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problema 280\n",
+    "\n",
+    "Define una función que, dados dos parámetros b y x, devuelva el valor de log<sub>b</sub>(x), es decir, el logaritomo en base b de x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado de logaritmo en base 20 con argumento 20, el resultado es: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos la libreria\n",
+    "from math import log\n",
+    "\n",
+    "# Definimos la funcion\n",
+    "def calcula_log (base, argumento):\n",
+    "    return log(argumento, base)\n",
+    "\n",
+    "# Pedimos los datos de teclado\n",
+    "b = int(input(\"Dame la base:\\n\"))\n",
+    "arg = int(input(\"Dame el argumento:\\n\"))\n",
+    "\n",
+    "# Mostramos el resultado en pantalla\n",
+    "print(\"El resultado de logaritmo en base {0} con argumento {1}, el resultado es: {2}\".format(b, arg, calcula_log(base=b, argumento=arg)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercio 281\n",
+    "\n",
+    "Diseña una función que devuelva la solución de la ecuación lineal ax\n",
+    "+b=0 dados a y b. Si la ecuacion tiene infinitas soluciones o no tiene solución alguna, la función lo detectará y devolverá el valor *None*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado de ax+b=0 es: -0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos las librerias para trabajar \n",
+    "from math import sqrt\n",
+    "\n",
+    "# Definimos la funcion\n",
+    "def resuleve_ecuacion(a, b):\n",
+    "    if a != 0:\n",
+    "        x = -b / a\n",
+    "        if (a * x) + b == 0:\n",
+    "            return x\n",
+    "        else:\n",
+    "            return None\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "# Pedimos datos desde teclado\n",
+    "a = float(input(\"Dame el valor de a:\\n\"))\n",
+    "b = float(input(\"Dame el valor de b:\\n\"))\n",
+    "print(\"El resultado de ax+b=0 es:\", resuleve_ecuacion(a, b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 282\n",
+    "\n",
+    "Diseña una función que calculo sumatoria de i = a hasta b dados a y b. Si a es mayor que b, la función devolverá el valor 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def calcula_sumatoria(a, b):\n",
+    "    if a > b:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        suma = 0\n",
+    "        for i in range(a, b):\n",
+    "            suma += i\n",
+    "        return suma\n",
+    "\n",
+    "# Pedimos datos desde el teclado\n",
+    "a = int(input(\"Dame el inicio:\\n\"))\n",
+    "b = int(input(\"Dame el final:\\n\"))\n",
+    "print(calcula_sumatoria(a,b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 284\n",
+    "\n",
+    "Define una función llamada raíz_n_enesima que devuelva el valor de <sup>n</sup>$\\sqrt{x}$. (Nota: recuerda que <sup>n</sup>$\\sqrt{x}$ es x<sup>1/n</sup>)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La raiz 3.0, del numero 15.0, es: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def raiz_n_esima(n, num):\n",
+    "    if num > 0:\n",
+    "        return num ** 1/n\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "# Pedimos datos desde el teclado\n",
+    "numero = float(input(\"Ingrese el numero que quiere calcular su raiz:\\n\"))\n",
+    "enesima = float(input(\"Ingresa el termino de grado de raiz:\\n\"))\n",
+    "\n",
+    "# Mostramos resultados \n",
+    "print(\"La raiz {0}, del numero {1}, es: {2}\".format(enesima, numero, raiz_n_esima(n=enesima, num=numero)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 286\n",
+    "\n",
+    "Diseña una función que diga (mediante la devolución de *True* o *False*) si dos números son amigos. Dos números son amigos si la suma de los divisores del primero (excluido él) es igual al segundo y viceversa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿10 y 12 son amigos?\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def numeros_amigos(int(num1), int(num2)):\n",
+    "    \"\"\"\n",
+    "    Funcion que comprueba si dos numeros son amigos\n",
+    "    \"\"\"\n",
+    "    x = 1\n",
+    "    suma = 0\n",
+    "    while(x < a):\n",
+    "        if a % x == 0:\n",
+    "            suma += x\n",
+    "        x += 1\n",
+    "    if suma == b:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Pedimos datos desde el teclado\n",
+    "a = int(input(\"Dame el valor de a:\\n\"))\n",
+    "b = int(input(\"Dame el valor de b:\\n\"))\n",
+    "\n",
+    "# Mostramos resultados\n",
+    "print(\"¿{0} y {1} son amigos?\\n{2}\".format(a, b, numeros_amigos(a, b)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 289\n",
+    "\n",
+    "Diseña una función sin argumetnos que devuelva un número aleatorio mayor o igual que 0.0 y menor que 10.0. Puedes llamar ala funcion random desde tu función"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos librerias necesarias\n",
+    "import random\n",
+    "\n",
+    "# Definimos la funcion\n",
+    "def numero_aleatorio():\n",
+    "    return random.randrange(0, 10)\n",
+    "\n",
+    "# Mandamos llamar la funcion\n",
+    "print(numero_aleatorio())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 290\n",
+    "\n",
+    "Diseña una función sin argumentos que devuelva un número aleatorio mayor o igual que -10.0 y menor que 10.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos librerias\n",
+    "import random\n",
+    "\n",
+    "# Definimos la funcion\n",
+    "def num_aleatorio():\n",
+    "    return random.randrange(-10, 10)\n",
+    "\n",
+    "# Mandamos llamar la funcion\n",
+    "print(num_aleatorio())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 291\n",
+    "\n",
+    "Para diseñar un juego de tablero nos vendrá bien disponer de un *dado electrónico*. Escribe una funcion python sin argumentos llamada dado que devuelva un número entero aleatorio entre 1 y 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos las librerias \n",
+    "from random import randrange\n",
+    "\n",
+    "# Definimos la funcion\n",
+    "def cubo():\n",
+    "    return randrange(1, 6)\n",
+    "\n",
+    "# Mandamos llamar la funcion\n",
+    "print(cubo())"
+   ]
   }
  ],
  "metadata": {
