Se agrega hasta la pagina 267 del libro

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -1097,7 +1097,7 @@
    ],
    "source": [
     "# Definimos la funcion\n",
-    "def numeros_amigos(int(num1), int(num2)):\n",
+    "def numeros_amigos(num1, num2):\n",
     "    \"\"\"\n",
     "    Funcion que comprueba si dos numeros son amigos\n",
     "    \"\"\"\n",
@@ -1199,14 +1199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 6)\n"
+      "2\n"
      ]
     }
    ],
@@ -1220,6 +1220,71 @@
     "\n",
     "# Mandamos llamar la funcion\n",
     "print(cubo())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo \n",
+    "\n",
+    "Area y angulo de un triangulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ) Calcular area del triangulo\n",
+      "2) Calcular angulo opuesto al primer lado\n",
+      "Escogiste la opcion 2\n",
+      "El resultado es: 90.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos librerias\n",
+    "from math import sqrt, asin, pi\n",
+    "\n",
+    "# Definimos funciones\n",
+    "def area_triangulo(a, b, c):\n",
+    "    s = (a + b + c) / 2\n",
+    "    return sqrt(s * (s-a) * (s-b) * (s -c))\n",
+    "\n",
+    "def angulo_alfa(a, b, c):\n",
+    "    s = area_triangulo(a, b, c)\n",
+    "    return 180 / pi * asin(2 * s / (b*c))\n",
+    "\n",
+    "def menu():\n",
+    "    opcion = 0\n",
+    "    while opcion != 1 and opcion !=2:\n",
+    "        print(\"1 ) Calcular area del triangulo\")\n",
+    "        print(\"2) Calcular angulo opuesto al primer lado\")\n",
+    "        opcion = int(input(\"Escoge opcion:\"))\n",
+    "    return opcion\n",
+    "\n",
+    "# Pedimos datos desde el teclado\n",
+    "lado1 = float(input(\"Dame lado a:\\n\"))\n",
+    "lado2 = float(input(\"Dame lado b:\\n\"))\n",
+    "lado3 = float(input(\"Dame lado c:\\n\"))\n",
+    "\n",
+    "# Mandamos llamar al menu\n",
+    "s = menu()\n",
+    "\n",
+    "# Evaluamos el valor de s\n",
+    "if s == 1:\n",
+    "    resultado = area_triangulo(lado1, lado2, lado3)\n",
+    "else:\n",
+    "    resultado = angulo_alfa(lado1, lado2, lado3)\n",
+    "\n",
+    "# Mostramos resultados\n",
+    "print(\"Escogiste la opcion\", s)\n",
+    "print(\"El resultado es:\", resultado)"
    ]
   }
  ],
