Se completa este capitulo de funciones al menos hasta el ejemplo del memorama

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -1286,11 +1286,293 @@
     "print(\"Escogiste la opcion\", s)\n",
     "print(\"El resultado es:\", resultado)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo cajero\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Billetes de 50 euros> 3\n",
+      "Billetes de 20 euros: 1\n",
+      "Billetes de 20 euros: 1\n",
+      "Billetes de 50 euros> 16\n",
+      "Billetes de 50 euros> 16\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Billetes de 50 euros> 11\n",
+      "Billetes de 20 euros: 1\n",
+      "Billetes de 50 euros> 4\n",
+      "Billetes de 50 euros> 5\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 50 euros> 6\n",
+      "Billetes de 20 euros: 1\n",
+      "Billetes de 50 euros> 6\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 50 euros> 3\n",
+      "Billetes de 50 euros> 2\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 50 euros> 2\n",
+      "Billetes de 50 euros> 2\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 50 euros> 16\n",
+      "Billetes de 50 euros> 8\n",
+      "Billetes de 20 euros: 20\n",
+      "Billetes de 20 euros: 40\n",
+      "Billetes de 20 euros: 36\n",
+      "Billetes de 10 euros: 8\n",
+      "Billetes de 10 euros: 56\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 10 euros: 2\n",
+      "Billetes de 10 euros: 3\n",
+      "Billetes de 10 euros: 4\n",
+      "Billetes de 10 euros: 5\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Billetes de 10 euros: 10\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 10 euros: 1\n",
+      "Billetes de 10 euros: 2\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Lamentamos no poder atender su peticion\n",
+      "Billetes de 10 euros: 1\n",
+      "Cajero sin dinero. Avise a mantenimiento\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos variables locales\n",
+    "carga50 = 100\n",
+    "carga20 = 100\n",
+    "carga10 = 100\n",
+    "\n",
+    "# definimos la funcion \n",
+    "def sacar_dinero(cantidad):\n",
+    "    global carga50, carga20, carga10\n",
+    "    \n",
+    "    if cantidad <= 50 * carga50 + 20 * carga20 + 10 * carga10:\n",
+    "        de50 = cantidad // 50\n",
+    "        cantidad = cantidad % 50\n",
+    "        if de50 >= carga50: # Si no hay sufcicientes billetes de 50\n",
+    "            cantidad = cantidad + (de50 - carga50) * 50\n",
+    "            de50 = carga50\n",
+    "        \n",
+    "        de20 = cantidad // 20\n",
+    "        cantidad = cantidad % 20\n",
+    "        if de20 >= carga20: # y no hay suficientes billetes de 20\n",
+    "            cantidad = cantidad + (de20 - carga20) * 20\n",
+    "            de20 = carga20\n",
+    "        \n",
+    "        de10 = cantidad // 10\n",
+    "        cantidad = cantidad % 10\n",
+    "        if de10 >= carga10: # y no hay suficientes billetes de 10\n",
+    "            cantidad = cantidad + (de10 - carga10) * 10\n",
+    "            de10 = carga10\n",
+    "        \n",
+    "        # Si todo ha ido bien, la cantidad que resta por entregar es nula\n",
+    "        if cantidad == 0:\n",
+    "            # Asi que hacemos efectiva la extraccion\n",
+    "            carga50 = carga50 - de50\n",
+    "            carga20 = carga20 - de20\n",
+    "            carga10 = carga10 - de10\n",
+    "            return [de50, de20, de10]\n",
+    "        else:\n",
+    "            return [0, 0, 0]\n",
+    "    else:\n",
+    "        return [0, 0, 0]\n",
+    "    \n",
+    "# Programa principal\n",
+    "while 50*carga50 + 20*carga20 + 10*carga10 > 0:\n",
+    "    peticion = int(input('Cantidad que desea sacar:\\n'))\n",
+    "    [de50, de20, de10] = sacar_dinero(peticion)\n",
+    "    if [de50, de20, de10] != [0, 0, 0]:\n",
+    "        if de50 > 0:\n",
+    "            print('Billetes de 50 euros:', de50)\n",
+    "        if de20 > 0:\n",
+    "            print('Billetes de 20 euros:', de20)\n",
+    "        if de10 > 0:\n",
+    "            print('Billetes de 10 euros:', de10)\n",
+    "    else:\n",
+    "        print('Lamentamos no poder atender su peticion')\n",
+    "\n",
+    "print('Cajero sin dinero. Avise a mantenimiento')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo Memorion\n",
+    "\n",
+    "Ya es hora de hacer algo interesante con todo lo que hemos aprendido. Vamos a construir un\n",
+    "sencillo juego solitario, Memorión, con el que aprenderemos, entre otras cosas, a manejar el ratón.\n",
+    "Memorión se juega sobre un tablero de 4 filas y 6 columnas. Cada celda del tablero contiene\n",
+    "un símbolo (una letra), pero no es visible porque está tapado por una baldosa. De cada símbolo\n",
+    "hay dos ejemplares (dos «a»», dos «b», etc.) y hemos de emparejarlos. Una jugada consiste en\n",
+    "levantar dos baldosas para ver las letras que hay bajo ellas. Primero se levanta una pulsando\n",
+    "en la baldosa, con lo que se destapa el símbolo que oculta, y después se destapa la otra y se\n",
+    "muestra brevemente su símbolo oculto correspondiente. Si las letras descubiertas son iguales,\n",
+    "hemos conseguido un emparejamiento y las baldosas se retiran del tablero, dejando las letras\n",
+    "definitivamente al descubierto. Si, por el contrario, las letras son diferentes, se tapan de nuevo.\n",
+    "Encontrar sus respectivas parejas dependerá entonces de la memoria del jugador. El objetivo es\n",
+    "emparejar todas las letras en el menor número de jugadas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importamos librerias\n",
+    "from random import randrange\n",
+    "from turtle import Screen, Turtle\n",
+    "from time import sleep\n",
+    "\n",
+    "# Declaracion de variables globales\n",
+    "CeldaCerrada = 0\n",
+    "CeldaAbierta = 1\n",
+    "CeldaTemporalmenteAbierta = 2\n",
+    "\n",
+    "# Declaracion de funciones\n",
+    "def crea_matriz(filas, columnas):\n",
+    "    matriz = []\n",
+    "    for i in range(filas):\n",
+    "        matriz.append([None] * columnas)\n",
+    "    return matriz\n",
+    "\n",
+    "def rellena_simbolos(simbolo):\n",
+    "    numsimbolo = 0\n",
+    "    for i in range(len(simbolo)):\n",
+    "        for j in range(len(simbolo[0])):\n",
+    "            simbolo[i][j] = chr(ord('a') + numsimbolo // 2)\n",
+    "            numsimbolo += 1\n",
+    "            \n",
+    "    for i in range(1000):\n",
+    "        [f1, c1] = [randrange(len(simbolo)), randrange(len(simbolo[0]))]\n",
+    "        [f2, c2] = [randrange(len(simbolo)), randrange(len(simbolo[0]))]\n",
+    "        tmp = simbolo[f1][c1]\n",
+    "        simbolo[f1][c1] = simbolo[f2][c2]\n",
+    "        simbolo[f2][c2] = tmp\n",
+    "        \n",
+    "def inicializa_tablero(tablero):\n",
+    "    for i in range(len(tablero)):\n",
+    "        for j in range(len(tablero[0])):\n",
+    "            tablero[i][j] = CeldaCerrada\n",
+    "            \n",
+    "def dibuja_tablero(tablero, simbolo):\n",
+    "    for i in range(len(simbolo)):\n",
+    "        for j in range(len(simbolo[0])):\n",
+    "            dibuja_celda(tablero, simbolo, i, j)\n",
+    "\n",
+    "def dibuja_celda(baldosa, simbolo, i, j):\n",
+    "    global tortuga\n",
+    "    tortuga.penup()\n",
+    "    tortuga.goto(j+5, i)\n",
+    "    tortuga.begin_fill()\n",
+    "    if baldosa[i][j] == CeldaCerrada:\n",
+    "        tortuga.fillcolor('blue')\n",
+    "        tortuga.circle(5)\n",
+    "    elif baldosa[i][j] == CeldaAbierta:\n",
+    "        tortuga.fillcolor('white')\n",
+    "        tortuga.circle(5)\n",
+    "        tortuga.goto(j+5, i+25)\n",
+    "        tortuga.write(simbolo[i][j])\n",
+    "    else:\n",
+    "        tortuga.fillcolor('yellow')\n",
+    "        tortuga.circle(5)\n",
+    "        tortuga.goto(j+5, i+25)\n",
+    "        tortuga.weite(simbolo[i][j])\n",
+    "    tortuga.end_fill()\n",
+    "    tortuga.pendown()\n",
+    "    \n",
+    "def clic(x, y):\n",
+    "    global pantalla, tablero, simbolo, temporal1, temporal2\n",
+    "    pantalla.onclick(None)\n",
+    "    [j, i] = [int(x), int(y)]\n",
+    "    if 0 <= i < len(tablero) and 0 <+ j < len(tablero[0]):\n",
+    "        if tablero[i][j] == CeldaCerrada:\n",
+    "            if temporal1 == None:\n",
+    "                temporal1 == [i,j]\n",
+    "                tablero[i][j] = CeldaTemporalmenteAbierta\n",
+    "            else:\n",
+    "                temporal2 = [i, j]\n",
+    "                tablero[i][j] = CeldaTemporalmenteAbierta\n",
+    "                dibuja_celda(tablero, simbolo, i, j)\n",
+    "                if temporal2 != None:\n",
+    "                    if simbolo[temporal1[0]][temporal1[1]] == simbolo[temporal2[0]] [temporal2[1]]:\n",
+    "                        tablero[temporal1[0]][temporal1[1]] = CeldaAbierta\n",
+    "                        tablero[temporal2[0]] [temporal2[1]] = CeldaAbierta\n",
+    "                    else:\n",
+    "                        sleep(0.5)\n",
+    "                        tablero[temporal1[0]][temporal1[1]] = CeldaCerrada\n",
+    "                        tablero[temporal2[0]] [temporal2[1]] = CeldaCerrada\n",
+    "                    dibuja_celda(tablero, simbolo, temporal1[0], temporal1[1])\n",
+    "                    dibuja_celda(tablero, simbolo, temporal2[0], temporal2[1])\n",
+    "                    temporal1 = None\n",
+    "                    temporal2 = None\n",
+    "                dibuja_celda(tablero, simbolo, i, j)\n",
+    "            if todas_abiertas(tablero):\n",
+    "                pantalla.bye()\n",
+    "            else:\n",
+    "                pantalla.onclick(clic)\n",
+    "\n",
+    "def todas_abiertas(tablero):\n",
+    "    for i in range(len(tablero)):\n",
+    "        for j in range(len(tablero[0])):\n",
+    "            if tablero[i][j] == CeldaCerrada:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "# Programa principal\n",
+    "filas = 4\n",
+    "columnas = 6\n",
+    "\n",
+    "pantalla = Screen()\n",
+    "pantalla.setup(columnas*50, filas*50)\n",
+    "pantalla.screensize(columnas*50, filas*50)\n",
+    "pantalla.setworldcoordinates(-5, -5, columnas+5, filas+5)\n",
+    "pantalla.delay(0)\n",
+    "tortuga = Turtle()\n",
+    "tortuga.hideturtle()\n",
+    "simbolo = crea_matriz(filas, columnas)\n",
+    "tablero = crea_matriz(filas, columnas)\n",
+    "\n",
+    "temporal1 = None\n",
+    "temporal2 = None\n",
+    "inicializa_tablero(tablero)\n",
+    "rellena_simbolos(simbolo)\n",
+    "dibuja_tablero(tablero, simbolo)\n",
+    "\n",
+    "pantalla.onclick(clic)\n",
+    "\n",
+    "pantalla.mainloop()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1304,12 +1586,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63963b3f4c440940f0b94a3100916033a226cb4f45979123153792d60aa56d6a"
+    "hash": "87e37ab4b4be2a65128e65ee6dd2cd25882cc8ca9e7bb4e0cbfeff46ad1b513d"
    }
   }
  },
